--- a/aula06/exer003.html
+++ b/aula06/exer003.html
@@ -17,10 +17,13 @@
         </style>
     </head>
     <body>
-     <h1>Olá, Mundo</h1>
-    <p>Já me livrei da maldição!</p>
+     <h1>Gicelda eu te amo !!!!!</h1>
+    <p>bjsssssssssssssssssssssss</p>
     <script>
-        window.prompt('Qual é o seu nome?') //Vai perguntar o nome...
+        let n1 = Number(window.prompt('Numero 1: '))
+        let n2 = Number(window.prompt('Numero 2: '))
+        let s = n1 + n2
+        window.alert(`A soma entre ${n1} e ${n2} é igual a ${s}`)
     </script>
     </body>
 </html>
