--- a/aula06/exer003.html
+++ b/aula06/exer003.html
@@ -7,7 +7,7 @@
         <title>Meu primeiro programa...</title>
         <style>
             body {
-                    background-color: rebeccapurple;
+                    background-color:teal;
                     color: white;
                     font: normal 20pt Arial;
             }
@@ -20,7 +20,10 @@
      <h1>Olá, Mundo</h1>
     <p>Já me livrei da maldição!</p>
     <script>
-        window.prompt('Qual é o seu nome?') //Vai perguntar o nome...
+        var n1 = Number(prompt('numero 1 ')); // se vira sozinho
+        var n2 = Number.parseFloat(window.prompt('numero 2 '));
+        var s = n1 + n2;
+        window.alert(`A soma dos valores é ${s}.`);
     </script>
     </body>
 </html>
